gestion_err_srcs

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 						link
 					</span>
 				</a>
-				<a href="./srcs/CV thib 2023.pdf">Curriculum
+				<a href="srcs/CV thib 2023.pdf">Curriculum
 					<span class="material-symbols-outlined">
 						link
 					</span>
@@ -58,7 +58,7 @@
 		</div>
 
 		<div class="header-right">
-			<img src="./srcs/thpham-v-ok.jpeg" alt="profile-photo">
+			<img src="srcs/thpham-v-ok.jpeg" alt="profile-photo">
 		</div>
 	</header>
 
@@ -98,7 +98,7 @@
 
 		<div class="image-card">
 			<div class="image-left">
-				<img src="./srcs/calculatrice.png" alt="img-calculette">
+				<img src="srcs/calculatrice.png" alt="img-calculette">
 			</div>
 			<div class="image-right">
 				<h1>Calculatrice</h1>
