--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
 
 <body>
 	<nav>
-		<span class="material-symbols-outlined">account_circle</span>
-		<h1>Thibault Pham-Van<h1>
+		<div>
+			<span class="material-symbols-outlined">account_circle</span>
+			<h1>Thibault Pham-Van</h1>
+		</div>
 		<ul>
 			<li>
 				<a href="mailto:thpham-v@student.42.fr">thpham-v@student.42.fr
@@ -39,20 +41,14 @@
 				Voici un portfolio de mes projets.</h1>
 			<p>Étudiant à 42 Paris</p>
 			<div class="links"> 
-				<a href="https://github.com/Thpham-v/">Github
-					<span class="material-symbols-outlined">
-						link
-					</span>
+				<a href="https://github.com/Thpham-v/" target="_blank">Github
+					<span class="material-symbols-outlined">link</span>
 				</a>
-				<a href="https://www.linkedin.com/in/thibault-pham-van-6363b6253">Linkedin
-					<span class="material-symbols-outlined">
-						link
-					</span>
+				<a href="https://www.linkedin.com/in/thibault-pham-van-6363b6253" target="_blank">Linkedin
+					<span class="material-symbols-outlined">link</span>
 				</a>
-				<a href="srcs/CV thib 2023.pdf">Curriculum
-					<span class="material-symbols-outlined">
-						link
-					</span>
+				<a href="srcs/CV thib 2023.pdf" target="_blank">Curriculum
+					<span class="material-symbols-outlined">link</span>
 				</a>
 			</div>
 		</div>
@@ -98,11 +94,15 @@
 
 		<div class="image-card">
 			<div class="image-left">
-				<img src="srcs/calculatrice.png" alt="img-calculette">
+				<img src="calculatrice/calculatrice.png" alt="img-calculette">
 			</div>
 			<div class="image-right">
-				<h1>Calculatrice</h1>
-				<p>Tout est dans le titre, une calculatrice tout ce qu'il y a de plus banale. Projet très simple mais efficace pour ce former sur javascript, html, css.</p>
+				<a href="calculatrice/index.html">
+					<h1>Calculatrice
+						<span class="material-symbols-outlined">link</span>
+					</h1>
+				</a>
+				<p>Tout est dans le titre, une calculatrice tout ce qu'il y a de plus banal. Projet très simple mais efficace pour ce former sur javascript, html, css.</p>
 			</div>
 		</div>	
 	</section>
@@ -113,5 +113,5 @@
 	</footer>
 
 </body>
-<script src="./script.js"></script>
+<script src="script.js"></script>
 </html>
