--- a/calculatrice/index.html
+++ b/calculatrice/index.html
@@ -13,9 +13,11 @@
 </head>
 
 <body>
-	<a href="https://thpham-v.github.io">
-		<nav><span class="material-symbols-outlined">home</span></nav>
-	</a>
+	<nav>
+		<a href="https://thpham-v.github.io">
+			<span class="material-symbols-outlined">home</span>
+		</a>
+	</nav>
 	<div class="calculatrice">
 		<div class="ecran"></div>
 			<div class="touches">
