--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				</span>
 				5 hameau des marronniers, Lognes - 77185
 			</small>
-			<h1>Bonjour, je suis Thibault Pham-Van. 
+			<h1>Bonjour,<br>je suis Thibault Pham-Van.<br>
 				Voici un portfolio de mes projets.</h1>
 			<p>Étudiant à 42 Paris</p>
 			<div class="links"> 
