--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<span class="material-symbols-outlined">mail</span>
 				</a>
 			</li>
-			<li id="dark-light-mode" onclick="changeDarkmode()">Dark mode</li>
+			<li id="dark-light-mode" onclick="changeDarkmode()">[Dark mode]</li>
 		</ul>
 	</nav>
 
