add_css_responsive_phone

--- a/index.html
+++ b/index.html
@@ -59,15 +59,16 @@
 	</header>
 
 	<section class="about">
-		<h4>À propos de moi</h4>
+		<h4>À propos</h4>
 		<p>Actuellement étudiant à l'école 42 à Paris, je suis sur le point de terminer le tronc commun de ma formation d'Architecte en Technologies du Numérique.<br>
 			Je me sens prêt à entrer dans le monde professionnel en tant que développeur web, car j'ai développé des compétences solides en C / C++ / front-end, avec également quelques notions en back-end.<br>
 			Ma passion pour le développement web se concentre principalement sur le côté front-end, où je peux créer des expériences utilisateur intuitives et esthétiquement plaisantes pour les utilisateurs.<br>
 			Je suis impatient de mettre mes connaissances en pratique et de continuer à apprendre et à grandir en tant que développeur web professionnel.</p>
+		<h1></h1>
 	</section>
 
 	<section class="images">
-		<h1>Liste non-exhaustive de projets</h1>
+		<h1>Portfolio de projets réalisés</h1>
 		<div class="image-card">
 			<div class="image-left">
 				<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8d/42_Logo.svg/langfr-560px-42_Logo.svg.png" alt="42-paris">
@@ -94,14 +95,14 @@
 
 		<div class="image-card">
 			<div class="image-left">
-				<img src="calculatrice/calculatrice.png" alt="img-calculette">
+				<img id="image-calculatrice" src="calculatrice/calculatrice.jpeg" alt="img-calculette">
 			</div>
 			<div class="image-right">
-				<a href="calculatrice/index.html">
-					<h1>Calculatrice
+				<h1>
+					<a href="calculatrice/index.html">Calculatrice
 						<span class="material-symbols-outlined">link</span>
-					</h1>
-				</a>
+					</a>
+				</h1>
 				<p>Tout est dans le titre, une calculatrice tout ce qu'il y a de plus banal. Projet très simple mais efficace pour ce former sur javascript, html, css.</p>
 			</div>
 		</div>	
