--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 		<h1>Portfolio de projets réalisés</h1>
 		<div class="image-card">
 			<div class="image-left">
-				<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8d/42_Logo.svg/langfr-560px-42_Logo.svg.png" alt="42-paris">
+				<img src="https://playminigames.ru/content/gameimagecontent/wolf3d_4614a1e14779414ca9329670367b642d.png" alt="42-paris">
 			</div>
 			<div class="image-right">
 				<h1>Cub3d</h1>
@@ -95,6 +95,31 @@
 
 		<div class="image-card">
 			<div class="image-left">
+				<img src="https://jolicode.com/media/original/2013/10/homepage-docker-logo.png" alt="42-paris">
+			</div>
+			<div class="image-right">
+				<h1>Inception</h1>
+				<p>
+					Le projet inception consiste à mettre en place une mini-infrastructure de différents services en utilisant Docker et Docker Compose.
+				</p>
+			</div>
+		</div>
+
+		<div class="image-card">
+			<div class="image-left">
+				<img src="https://miro.medium.com/v2/resize:fit:1400/format:webp/1*wCElM3ErppHD6-cEb3yeiw.png" alt="42-paris">
+			</div>
+			<div class="image-right">
+				<h1>FDF</h1>
+				<p>Le projet FDF (fil de fer) consiste à créer une representation graphique en 3 dimensions d'une carte en relief.<br>
+					Le logiciel lit un fichier contenant les coordonnées d'une série de points et les affiche en utilisant une projection en perspective.<br>
+					L'objectif est de pratiquer les concepts de la programmation graphique tels que la manipulation de la matrice de transformation et l'affichage de primitives graphiques simples. 
+				</p>
+			</div>
+		</div>
+
+		<div class="image-card">
+			<div class="image-left">
 				<img id="image-calculatrice" src="calculatrice/calculatrice.jpeg" alt="img-calculette">
 			</div>
 			<div class="image-right">
@@ -103,7 +128,7 @@
 						<span class="material-symbols-outlined">link</span>
 					</a>
 				</h1>
-				<p>Tout est dans le titre, une calculatrice tout ce qu'il y a de plus banal. Projet très simple mais efficace pour ce former sur javascript, html, css.</p>
+				<p>Tout est dans le titre, une calculatrice tout se qu'il y a de plus banal. Projet très simple mais efficace pour ce former sur javascript, html, css.</p>
 			</div>
 		</div>	
 	</section>
