--- a/index.html
+++ b/index.html
@@ -74,7 +74,11 @@
 				<img src="https://playminigames.ru/content/gameimagecontent/wolf3d_4614a1e14779414ca9329670367b642d.png" alt="42-paris">
 			</div>
 			<div class="image-right">
-				<h1>Cub3d</h1>
+				<h1>
+					<a href="https://github.com/Thpham-v/cub3d" target="_blank">Cub3d (github)
+						<span class="material-symbols-outlined">link</span>
+					</a>
+				</h1>
 				<p>Au cours de ce projet, nous avons du développer un jeu en 3D en utilisant les fonctionnalités de la bibliothèque miniLibX, notamment les fonctions de dessin de lignes, de tracé de formes géométriques et de gestion de la mémoire.<br>
 					Il est également nécessaire de mettre en place des algorithmes pour gérer les mouvements et les interactions du joueur avec l'environnement et donc de comprendre le fonctionnement du raycasting.
 				</p>
@@ -86,7 +90,11 @@
 				<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8d/42_Logo.svg/langfr-560px-42_Logo.svg.png" alt="42-paris">
 			</div>
 			<div class="image-right">
-				<h1>Philosophers</h1>
+				<h1>
+					<a href="https://github.com/Thpham-v/philosophers" target="_blank">Philosophers (github)
+						<span class="material-symbols-outlined">link</span>
+					</a>
+				</h1>
 				<p>Philosophers est un projet de développement de programme qui a pour objectif de simuler l'exécution concurrente d'un groupe de philosophes. Les philosophes passent leur temps à réfléchir et à manger à une table avec des couverts.<br>
 					Le but du projet est de gérer la synchronisation entre les philosophes (gestion de multi threads) pour éviter les conflits d'accès aux ressources (couverts) et éviter les problèmes tels que les décès de faim et la boucle d'attente. 
 				</p>
@@ -98,7 +106,11 @@
 				<img src="https://jolicode.com/media/original/2013/10/homepage-docker-logo.png" alt="42-paris">
 			</div>
 			<div class="image-right">
-				<h1>Inception</h1>
+				<h1>
+					<a href="https://github.com/Thpham-v/Inception" target="_blank">Inception (github)
+						<span class="material-symbols-outlined">link</span>
+					</a>
+				</h1>
 				<p>
 					Le projet inception consiste à mettre en place une mini-infrastructure de différents services en utilisant Docker et Docker Compose.
 				</p>
@@ -110,7 +122,11 @@
 				<img src="https://miro.medium.com/v2/resize:fit:1400/format:webp/1*wCElM3ErppHD6-cEb3yeiw.png" alt="42-paris">
 			</div>
 			<div class="image-right">
-				<h1>FDF</h1>
+				<h1>
+					<a href="https://github.com/Thpham-v/fdf_linux" target="_blank">FDF (github)
+						<span class="material-symbols-outlined">link</span>
+					</a>
+				</h1>
 				<p>Le projet FDF (fil de fer) consiste à créer une representation graphique en 3 dimensions d'une carte en relief.<br>
 					Le logiciel lit un fichier contenant les coordonnées d'une série de points et les affiche en utilisant une projection en perspective.<br>
 					L'objectif est de pratiquer les concepts de la programmation graphique tels que la manipulation de la matrice de transformation et l'affichage de primitives graphiques simples. 
