--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +9,8 @@
 	<link rel="stylesheet" href="style.css">
 
 	<!-- Link GoogleFonts -->
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+	<link rel="stylesheet"
+		href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
 	<title>Site Portfolio - Thibault Pham-Van</title>
 </head>
@@ -22,7 +24,7 @@
 		<ul>
 			<li>
 				<a href="mailto:thpham-v@student.42.fr">thpham-v@student.42.fr
-				<span class="material-symbols-outlined">mail</span>
+					<span class="material-symbols-outlined">mail</span>
 				</a>
 			</li>
 			<li id="dark-light-mode" onclick="changeDarkmode()">[Dark mode]</li>
@@ -40,7 +42,7 @@
 			<h1>Bonjour,<br>je suis Thibault Pham-Van.<br>
 				Voici un portfolio de mes projets.</h1>
 			<p>Étudiant à 42 Paris</p>
-			<div class="links"> 
+			<div class="links">
 				<a href="https://github.com/Thpham-v/" target="_blank">Github
 					<span class="material-symbols-outlined">link</span>
 				</a>
@@ -60,10 +62,14 @@
 
 	<section class="about">
 		<h4>À propos</h4>
-		<p>Actuellement étudiant à l'école 42 à Paris, je suis sur le point de terminer le tronc commun de ma formation d'Architecte en Technologies du Numérique.<br>
-			Je me sens prêt à entrer dans le monde professionnel en tant que développeur web, car j'ai développé des compétences solides en C / C++ / front-end, avec également quelques notions en back-end.<br>
-			Ma passion pour le développement web se concentre principalement sur le côté front-end, où je peux créer des expériences utilisateur intuitives et esthétiquement plaisantes pour les utilisateurs.<br>
-			Je suis impatient de mettre mes connaissances en pratique et de continuer à apprendre et à grandir en tant que développeur web professionnel.</p>
+		<p>Actuellement étudiant à l'école 42 à Paris, je suis sur le point de terminer le tronc commun de ma formation
+			d'Architecte en Technologies du Numérique.<br>
+			Je me sens prêt à entrer dans le monde professionnel en tant que développeur web, car j'ai développé des
+			compétences solides en C / C++ / front-end, avec également quelques notions en back-end.<br>
+			Ma passion pour le développement web se concentre principalement sur le côté front-end, où je peux créer des
+			expériences utilisateur intuitives et esthétiquement plaisantes pour les utilisateurs.<br>
+			Je suis impatient de mettre mes connaissances en pratique et de continuer à apprendre et à grandir en tant
+			que développeur web professionnel.</p>
 		<h1></h1>
 	</section>
 
@@ -71,7 +77,28 @@
 		<h1>Portfolio de projets réalisés</h1>
 		<div class="image-card">
 			<div class="image-left">
-				<img src="https://playminigames.ru/content/gameimagecontent/wolf3d_4614a1e14779414ca9329670367b642d.png" alt="42-paris">
+				<img src="https://www.freepng.fr/png-fkjhnc/download.html" alt="img-terre">
+			</div>
+			<div class="image-right">
+				<h1>
+					<a href="https://thpham-v.github.io/drapeau/#/">Drapeaux du monde
+						<span class="material-symbols-outlined">link</span>
+					</a>
+				</h1>
+				<p>
+					Site de pays qui permet aux utilisateurs de découvrir les drapeaux du monde entier et les
+					informations sur leurs populations.<br />
+					Avec des options de tri par continent ou par ordre croissant/décroissant.<br />
+					Récupération et utilisation d'une API publique pour afficher les drapeaux ou d'autres données.<br />
+					Fait en React.JS.
+				</p>
+			</div>
+		</div>
+
+		<div class="image-card">
+			<div class="image-left">
+				<img src="https://playminigames.ru/content/gameimagecontent/wolf3d_4614a1e14779414ca9329670367b642d.png"
+					alt="42-paris">
 			</div>
 			<div class="image-right">
 				<h1>
@@ -79,15 +106,19 @@
 						<span class="material-symbols-outlined">link</span>
 					</a>
 				</h1>
-				<p>Au cours de ce projet, nous avons du développer un jeu en 3D en utilisant les fonctionnalités de la bibliothèque miniLibX, notamment les fonctions de dessin de lignes, de tracé de formes géométriques et de gestion de la mémoire.<br>
-					Il est également nécessaire de mettre en place des algorithmes pour gérer les mouvements et les interactions du joueur avec l'environnement et donc de comprendre le fonctionnement du raycasting.
+				<p>Au cours de ce projet, nous avons du développer un jeu en 3D en utilisant les fonctionnalités de la
+					bibliothèque miniLibX, notamment les fonctions de dessin de lignes, de tracé de formes géométriques
+					et de gestion de la mémoire.<br>
+					Il est également nécessaire de mettre en place des algorithmes pour gérer les mouvements et les
+					interactions du joueur avec l'environnement et donc de comprendre le fonctionnement du raycasting.
 				</p>
 			</div>
 		</div>
 
 		<div class="image-card">
 			<div class="image-left">
-				<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8d/42_Logo.svg/langfr-560px-42_Logo.svg.png" alt="42-paris">
+				<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8d/42_Logo.svg/langfr-560px-42_Logo.svg.png"
+					alt="42-paris">
 			</div>
 			<div class="image-right">
 				<h1>
@@ -95,8 +126,12 @@
 						<span class="material-symbols-outlined">link</span>
 					</a>
 				</h1>
-				<p>Philosophers est un projet de développement de programme qui a pour objectif de simuler l'exécution concurrente d'un groupe de philosophes. Les philosophes passent leur temps à réfléchir et à manger à une table avec des couverts.<br>
-					Le but du projet est de gérer la synchronisation entre les philosophes (gestion de multi threads) pour éviter les conflits d'accès aux ressources (couverts) et éviter les problèmes tels que les décès de faim et la boucle d'attente. 
+				<p>Philosophers est un projet de développement de programme qui a pour objectif de simuler l'exécution
+					concurrente d'un groupe de philosophes. Les philosophes passent leur temps à réfléchir et à manger à
+					une table avec des couverts.<br>
+					Le but du projet est de gérer la synchronisation entre les philosophes (gestion de multi threads)
+					pour éviter les conflits d'accès aux ressources (couverts) et éviter les problèmes tels que les
+					décès de faim et la boucle d'attente.
 				</p>
 			</div>
 		</div>
@@ -112,14 +147,16 @@
 					</a>
 				</h1>
 				<p>
-					Le projet inception consiste à mettre en place une mini-infrastructure de différents services en utilisant Docker et Docker Compose.
+					Le projet inception consiste à mettre en place une mini-infrastructure de différents services en
+					utilisant Docker et Docker Compose.
 				</p>
 			</div>
 		</div>
 
 		<div class="image-card">
 			<div class="image-left">
-				<img src="https://miro.medium.com/v2/resize:fit:1400/format:webp/1*wCElM3ErppHD6-cEb3yeiw.png" alt="42-paris">
+				<img src="https://miro.medium.com/v2/resize:fit:1400/format:webp/1*wCElM3ErppHD6-cEb3yeiw.png"
+					alt="42-paris">
 			</div>
 			<div class="image-right">
 				<h1>
@@ -127,9 +164,12 @@
 						<span class="material-symbols-outlined">link</span>
 					</a>
 				</h1>
-				<p>Le projet FDF (fil de fer) consiste à créer une representation graphique en 3 dimensions d'une carte en relief.<br>
-					Le logiciel lit un fichier contenant les coordonnées d'une série de points et les affiche en utilisant une projection en perspective.<br>
-					L'objectif est de pratiquer les concepts de la programmation graphique tels que la manipulation de la matrice de transformation et l'affichage de primitives graphiques simples. 
+				<p>Le projet FDF (fil de fer) consiste à créer une representation graphique en 3 dimensions d'une carte
+					en relief.<br>
+					Le logiciel lit un fichier contenant les coordonnées d'une série de points et les affiche en
+					utilisant une projection en perspective.<br>
+					L'objectif est de pratiquer les concepts de la programmation graphique tels que la manipulation de
+					la matrice de transformation et l'affichage de primitives graphiques simples.
 				</p>
 			</div>
 		</div>
@@ -144,9 +184,10 @@
 						<span class="material-symbols-outlined">link</span>
 					</a>
 				</h1>
-				<p>Tout est dans le titre, une calculatrice tout se qu'il y a de plus banal. Projet très simple mais efficace pour ce former sur javascript, html, css.</p>
+				<p>Tout est dans le titre, une calculatrice tout se qu'il y a de plus banal. Projet très simple mais
+					efficace pour ce former sur javascript, html, css.</p>
 			</div>
-		</div>	
+		</div>
 	</section>
 
 	<footer>
@@ -156,4 +197,5 @@
 
 </body>
 <script src="script.js"></script>
+
 </html>
