--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 		<h1>Portfolio de projets réalisés</h1>
 		<div class="image-card">
 			<div class="image-left">
-				<img src="https://www.freepng.fr/png-fkjhnc/download.html" alt="img-terre">
+				<img src="/earth.png" alt="img-terre">
 			</div>
 			<div class="image-right">
 				<h1>
