--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 			</div>
 			<div class="image-right">
 				<h1>
-					<a href="https://thpham-v.github.io/drapeau/#/">Drapeaux du monde
+					<a href="https://thpham-v.github.io/drapeau/#/" target="_blank">Drapeaux du monde
 						<span class="material-symbols-outlined">link</span>
 					</a>
 				</h1>
